--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="hdleft">
-                <img src="Img/logo.png" alt="logo" width="37" height="37"><span>airbnb</span>
-            </div>
-            <div class="hdcenter">
-                <button class="hdbtn1">어디든지</button>
-                <div class='v-line'></div>
-                <button class="hdbtn1">언제든 일주일</button>
-                <div class='v-line'></div>
-                <button class="hdbtn2">게스트 추가</button>
-                <img class="hdimg" src="Img/searchicon.png" alt="search" width="40" height="40">
-            </div>
-            <div class="hdright">
-                <button class="hdtxtbtn">당신의 공간을 에어비앤비하세요</button>
-                <button class="hdlangbtn"><img src="Img/transicon.png" width="30" height="30"></button>
-                <button class="hdmybtn" onclick="onMenulist()"><img src="Img/mypageicon1.png" width="30" height="30"><img src="Img/mypageicon2.png" width="40" height="40"></button>
+        <div class="wrap0">
+            <div class="container">
+                <div class="hdleft">
+                    <img src="Img/logo.png" alt="logo" width="37" height="37"><span>airbnb</span>
+                </div>
+                <div class="hdcenter">
+                    <button class="hdbtn1">어디든지</button>
+                    <div class='v-line'></div>
+                    <button class="hdbtn1">언제든 일주일</button>
+                    <div class='v-line'></div>
+                    <button class="hdbtn2">게스트 추가</button>
+                    <img class="hdimg" src="Img/searchicon.png" alt="search" width="40" height="40">
+                </div>
+                <div class="hdright">
+                    <button class="hdtxtbtn">당신의 공간을 에어비앤비하세요</button>
+                    <button class="hdlangbtn"><img src="Img/transicon.png" width="30" height="30"></button>
+                    <button class="hdmybtn" onclick="onMenulist()"><img src="Img/mypageicon1.png" width="30" height="30"><img src="Img/mypageicon2.png" width="40" height="40"></button>
+                </div>
             </div>
         </div>
         <div class="menudisplay" id="mymenu">
@@ -37,64 +39,66 @@
                 </div>
             </div>
         </div>
-        <div class="container2">
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg"><p>기상천외한 숙소</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/51f5cf64-5821-400c-8033-8a10c7787d69.jpg"><p>한옥</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c.jpg"><p>해변 바로 앞</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/687a8682-68b3-4f21-8d71-3c3aef6c1110.jpg"><p>보트</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/5cdb8451-8f75-4c5f-a17d-33ee228e3db8.jpg"><p>풍차</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/eb7ba4c0-ea38-4cbb-9db6-bdcc8baad585.jpg"><p>개인실</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg"><p>최고의 전망</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/3726d94b-534a-42b8-bca0-a0304d912260.jpg"><p>인기 급상승</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/6ad4bd95-f086-437d-97e3-14d12155ddfe.jpg"><p>한적한 시골</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/827c5623-d182-474a-823c-db3894490896.jpg"><p>료칸</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/c0a24c04-ce1f-490c-833f-987613930eca.jpg"><p>국립공원</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg"><p>멋진 수영장</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/78ba8486-6ba6-4a43-a56d-f556189193da.jpg"><p>저택</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/50861fca-582c-4bcc-89d3-857fb7ca6528.jpg"><p>디자인</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/1b6a8b70-a3b6-48b5-88e1-2243d9172c06.jpg"><p>캐슬</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/35919456-df89-4024-ad50-5fcb7a472df9.jpg"><p>초소형 주택</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/ca25c7f3-0d1f-432b-9efa-b9f5dc6d8770.jpg"><p>캠핑장</p>
-            </div>
-            <div class="imgtxt">
-                <img src="https://a0.muscache.com/pictures/c0fa9598-4e37-40f3-b734-4bd0e2377add.jpg"><p>신규</p>
-            </div>
-            <div class="headbtm">
-                <button class="nextbtn">></button>
-                <button class="filterbtn"><img src="Img/filtericon.png">필터</button>
+        <div class="wrap1">
+            <div class="container2">
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg"><p>기상천외한 숙소</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/51f5cf64-5821-400c-8033-8a10c7787d69.jpg"><p>한옥</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c.jpg"><p>해변 바로 앞</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/687a8682-68b3-4f21-8d71-3c3aef6c1110.jpg"><p>보트</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/5cdb8451-8f75-4c5f-a17d-33ee228e3db8.jpg"><p>풍차</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/eb7ba4c0-ea38-4cbb-9db6-bdcc8baad585.jpg"><p>개인실</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg"><p>최고의 전망</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/3726d94b-534a-42b8-bca0-a0304d912260.jpg"><p>인기 급상승</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/6ad4bd95-f086-437d-97e3-14d12155ddfe.jpg"><p>한적한 시골</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/827c5623-d182-474a-823c-db3894490896.jpg"><p>료칸</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/c0a24c04-ce1f-490c-833f-987613930eca.jpg"><p>국립공원</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg"><p>멋진 수영장</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/78ba8486-6ba6-4a43-a56d-f556189193da.jpg"><p>저택</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/50861fca-582c-4bcc-89d3-857fb7ca6528.jpg"><p>디자인</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/1b6a8b70-a3b6-48b5-88e1-2243d9172c06.jpg"><p>캐슬</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/35919456-df89-4024-ad50-5fcb7a472df9.jpg"><p>초소형 주택</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/ca25c7f3-0d1f-432b-9efa-b9f5dc6d8770.jpg"><p>캠핑장</p>
+                </div>
+                <div class="imgtxt">
+                    <img src="https://a0.muscache.com/pictures/c0fa9598-4e37-40f3-b734-4bd0e2377add.jpg"><p>신규</p>
+                </div>
+                <div class="headbtm">
+                    <button class="nextbtn">></button>
+                    <button class="filterbtn"><img src="Img/filtericon.png">필터</button>
+                </div>
             </div>
         </div>
     </header>
